fix(<clickable />): fix wrapping

--- a/src/components/Clickable/Clickable.scss
+++ b/src/components/Clickable/Clickable.scss
@@ -14,4 +14,5 @@
   font-size: __dangerously-get-font-size__(2);
   padding: 0;
   text-decoration: none;
+  white-space: nowrap;
 }
